2003-12-05  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktreeview.override (pygtk_tree_selection_foreach_marshal):
	Increase the ref count on Py_None (#128448, Vsevolod Fedorov)

	* gtk/gtk-types.c (pygtk_tree_model_row_get_parent): Swap parent
	and child argument. (#123605, patch by Steve Chaplin)

2003-10-23  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_item_factory_create_items): Use
	GdkPixbuf objects instead of raw strings, Thanks to Rob Melby for
	the patch, #123456

	* gtk/gtkwidget.override (_wrap_gtk_widget_size_request): pass
	back the values instead of pointers to them. Thanks to Rob Melby
	for the patch, #125272

2003-09-02  James Henstridge  <james@daa.com.au>

	* ChangeLog.pre-2-0: rename old change log.
