@@ -1,3 +1,8 @@
+2003-12-18  Johan Dahlin  <johan@gnome.org>
+
+	* gtk/pygtktreemodel.c: handle None iterator values. Patch by John
+	Ehresman, fixes #126479.
+
 2003-12-05  Johan Dahlin  <johan@gnome.org>
 
 	* gtk/gtktreeview.override (pygtk_tree_selection_foreach_marshal):
